--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "query-string": "^9.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sass": "^1.82.0"
+    "sass": "^1.82.0",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
