--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "query-string": "^9.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.0.2",
     "sass": "^1.82.0",
     "yup": "^1.5.0"
   },
